--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="header container align-items-center justify-content-center">
     <div class="header--block size margin container column">
       <div class="header--block--text" data-aos="fade-up" data-aos-delay="" data-aos-offset="0">
-        オンラインで提供されている無象の教育サービスを検索する
+        オンラインで提供されている、無料の教育サービスを検索する
       </div>
       <div class="container column position-search">
         <div class="header--block--input" data-aos="fade-up" data-aos-delay="" data-aos-offset="0" id="search-container">
