--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,7 @@
   <div class="footer container column align-items-center justify-content-center">
     <div class="footer--block text-align-center">
       <div class="" data-aos="fade-up" data-aos-delay="" data-aos-offset="0">
-        <a href="{{ site.baseurl }}/"><span>{{ site.username }}｜</span> {{ site.title }}</a>
-      </div>
-      <div class="by" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">
-        <a href="https://github.com/gustavoquinalha/jekyll-help-center-theme" target="_blank"><small>Created with
-            jekyll</small></a>
+        <a href="{{ site.baseurl }}/"><span>{{ site.title }} </span><small>by {{ site.username }}</small></a>
       </div>
     </div>
   </div>
