--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,11 +2,11 @@
   <div class="size margin menu--content container align-items-center justify-content-between">
 
     <div class="" data-aos="fade-right" data-aos-delay="" data-aos-offset="0">
-      <a href="{{ site.baseurl }}/"><span>{{ site.username }}｜</span> {{ site.title }}</a>
+      <a href="{{ site.baseurl }}/"><span>{{ site.title }} </span><small>by {{ site.username }}</small></a>
     </div>
 
 
-    <a href="https://new.or.jp" data-aos="fade-left" data-aos-delay="" data-aos-offset="0">
+    <a href="https://github.com/newcreator-org/edu-center" data-aos="fade-left" data-aos-delay="" data-aos-offset="0">
       <div class="container align-items-baseline back-to-site">
         <div class="">
           <span class="feather-icon icon-external-link"></span>
