✨(front): add noto-sans font

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');
+
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -11,7 +14,8 @@ html {
 }
 
 html {
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: "Noto Sans Japanese", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+
   font-size: 18px;
   font-weight: 300;
   line-height: 1.6;
