--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -3,9 +3,12 @@
 }
 
 .header {
-  min-height: 200px;
-  background: url('../assets/img/pattern2.svg'), rgba($colortheme, .9);
-  background-size: 310px;
+  min-height: 300px;
+  background: url('../assets/img/cover.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  // background-size: 310px;
   width: 100%;
 
   .header--block {
