✨(front): fix layout and add article

--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -7,7 +7,9 @@
   <a href="{{ site.baseurl }}{{ post.url }}" class="list-item container" data-aos="fade-up" data-aos-offset="0" data-aos-delay="100">
 
     <div class="list-item-icon container align-items-center justify-content-center">
-      <span class="feather-icon icon-{{post.icon}}" data-aos="fade-right" data-aos-offset="0" data-aos-delay="500"></span>
+      <!-- <span class="feather-icon icon-{{post.icon}}" data-aos="fade-right" data-aos-offset="0" data-aos-delay="500"></span> -->
+      <img
+        src=" {{ post.image-url }}">
     </div>
 
     <div class="flex-grow-1">
