--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 <div class="size margin min-height">
   <article>
     <!-- titles -->
-    <h1 class="post-title" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">{{ page.title }}</h1>
+    <h1 class="post-title" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">{{ page.title }} <small>by {{ page.by }}</smalll></h1>
     <div class="post-date" data-aos="fade-left" data-aos-delay="300" data-aos-offset="0">最終更新 : 
       <time>{{ page.date | date: "%Y年%m月%d日" }}</time>
       <!-- <span class="reading-time" title="Estimated read time"> - {{ minutesText }}</span> -->
