--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,10 @@
       <div class="" data-aos="fade-up" data-aos-delay="" data-aos-offset="0">
         <a href="{{ site.baseurl }}/"><span>{{ site.title }} </span><small>by {{ site.username }}</small></a>
       </div>
+      <div class="" data-aos="fade-up" data-aos-delay="" data-aos-offset="0">
+        <small class="copyright">© 2020 <a href="https://www.new.or.jp">特定非営利活動法人ニュークリエイター・オルグ</a></small>
+      </div>
     </div>
   </div>
+
 </footer>
