--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,42 +11,26 @@ layout: default
 <div class="size margin min-height">
   <article>
     <!-- titles -->
-    <h1 class="post-title" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">{{ page.title }} <small>by {{ page.by }}</smalll></h1>
+    <h1 class="post-title" data-aos="fade-up" data-aos-delay="200" data-aos-offset="0">{{ page.title }}</h1>
     <div class="post-date" data-aos="fade-left" data-aos-delay="300" data-aos-offset="0">最終更新 : 
       <time>{{ page.date | date: "%Y年%m月%d日" }}</time>
       <!-- <span class="reading-time" title="Estimated read time"> - {{ minutesText }}</span> -->
     </div>
+
+    <hr class="margin-top-30 margin-bottom-50">
+
     <!-- titles -->
-
-    <!-- posts -->
-    <div class="margin-top-20 margin-bottom-50">
-      {% for x in page.titles %}
-      <div class="list-item-2 container wrap-reverse align-items-end justify-content-center" data-aos="fade-up" data-aos-delay="0" data-aos-offset="0">
-        {% if x.image %}
-        <div class="list-item-2-img flex-basis-300 flex-grow-1" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
-          <img src="{{ site.baseurl }}/assets/img/{{ x.image }}" width="100%" alt="">
-        </div>
-        {% endif %}
-        <div class="flex-basis-400 flex-grow-5">
-          <div class="" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
-            <h2 class="list-post-title">
-            {{x.title}}
-            </h2>
-          </div>
-          <div class="" data-aos="fade-up" data-aos-delay="300" data-aos-offset="0">
-            <span class="list-post-description">
-              {{x.text}}
-            </span>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
+    <div class="margin-top-30 margin-bottom-50">
+      <h3>概要</h3>
+      {{ content }}<br>
+      <!-- <h3>提供方法</h3>
+      <p>{{ page.content }}</p><br> -->
+      <h3>対象年齢</h3>
+      <p>{{ page.target }}</p><br>
+      <h3>サイトURL</h3>
+      <p><a href="{{ page.service }}">{{ page.service }}</a></p><br>
+      <h3>運営会社</h3>
+      <p>{{ page.by }}</p>
     </div>
-    <!-- posts -->
-
-    <!-- content -->
-    {{ content }}
-
-    <!-- content -->
   </article>
 </div>
