🔧(front): add footer margin

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
       <h3>サイトURL</h3>
       <p><a href="{{ page.service }}">{{ page.service }}</a></p><br>
       <h3>運営会社</h3>
-      <p>{{ page.by }}</p>
+      <p>{{ page.by }}</p><br>
     </div>
   </article>
 </div>
