✨(front): add format

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,8 +23,8 @@ layout: default
     <div class="margin-top-30 margin-bottom-50">
       <h3>概要</h3>
       {{ content }}<br>
-      <!-- <h3>提供方法</h3>
-      <p>{{ page.content }}</p><br> -->
+      <h3>提供方法</h3>
+      <p>{{ page.format }}</p><br>
       <h3>対象年齢</h3>
       <p>{{ page.target }}</p><br>
       <h3>サイトURL</h3>
