😍(front): content -> description

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,8 @@ layout: default
     <!-- titles -->
     <div class="margin-top-30 margin-bottom-50">
       <h3>概要</h3>
-      {{ content }}<br>
+      <!-- {{ content }}<br> -->
+      <p>{{ page.description }}</p><br>
       <h3>提供方法</h3>
       <p>{{ page.format }}</p><br>
       <h3>対象年齢</h3>
