--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap');
+
 .content-post {
   min-height: calc(100vh - 480px);
   background: #f3f5f7;
   padding-top: 30px;
   padding-bottom: 30px;
+    font-family: "Noto Sans Japanese",
+    "Hiragino Kaku Gothic ProN",
+    Meiryo,
+    sans-serif;
 }
 
 .list-item {
