🔧(docs): 文面の変更

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="header container align-items-center justify-content-center">
     <div class="header--block size margin container column">
       <div class="header--block--text" data-aos="fade-up" data-aos-delay="" data-aos-offset="0">
-        <strong>オンラインで提供されている、<br>子ども向けの学習サービスを検索する</strong>
+        <strong>新型コロナウイルス(COVID-19)の流行および学校閉鎖に向けた、<br>オンラインの教育サービス一覧サイト</strong>
       </div>
       <div class="container column position-search">
         <div class="header--block--input" data-aos="fade-up" data-aos-delay="" data-aos-offset="0" id="search-container">
