--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,10 @@ layout: default
       <p><a href="{{ page.service }}">{{ page.service }}</a></p><br>
       <h3>運営会社</h3>
       <p>{{ page.by }}</p><br>
+      {% include posts_share.html %}
     </div>
   </article>
+ 
 </div>
+
+
