--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,7 +32,7 @@
   <meta property="og:url" content="{{ site.url }}" />
   <meta property="og:description" content="{{ site.description }}" />
   <meta property="og:site_name" content="{{ site.title }}" />
-  <meta property="og:image" content="{{site.url}}{{site.baseurl}}/assets/img/image.png" />
+  <meta property="og:image" content="{{site.url}}{{site.baseurl}}/assets/img/OGP.png" />
   <meta property="fb:app_id" content="1154262757941899" />
   <meta property="fb:admins" content="100002787447461" />
   <!-- facebook -->
@@ -42,9 +42,9 @@
   <meta name="twitter:title" content="{{ site.title }}">
   <meta name="twitter:description" content="{{ site.description }}">
   <meta name="twitter:creator" content="{{ site.twitter_username }}">
-  <meta name="twitter:image" content="{{site.url}}{{site.baseurl}}/assets/img/image.png">
+  <meta name="twitter:image" content="{{site.url}}{{site.baseurl}}/assets/img/OGP.png">
   <meta itemprop="name" content="{{ site.title }}">
   <meta itemprop="description" content="{{ site.description }}">
-  <meta itemprop="image" content="{{site.url}}{{site.baseurl}}/assets/img/image.png">
+  <meta itemprop="image" content="{{site.url}}{{site.baseurl}}/assets/img/OGP.png">
   <!-- twitter -->
 </head>
