--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
   <!-- facebook -->
 
   <!-- twitter -->
-  <meta name="twitter:card" content="summary">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="{{ site.title }}">
   <meta name="twitter:description" content="{{ site.description }}">
   <meta name="twitter:creator" content="{{ site.twitter_username }}">
